
Version 6.0.3 - not yet released
* devices
  - EW, Volkslogger: restart I/O thread after declaration failure
  - CAI302: check for I/O errors during declaration
  - Volkslogger: enable task declaration
* user interface
  - Language: translation updates
  - Auto zoom: don't disable in circling mode
  - more airspace rendering fixes for Android

Version 6.0.2 - 2011/01/20
* devices
  - more robust NMEA checksum parser
  - CAI302: restart I/O thread after declaration failure
  - Condor: read wind from LXWP0
* user interface
  - Language: translation updates
  - Language: add Spanish translation
  - Language: add Russian translation
  - Language: translations Czech, Greek, Croatian, Italian, Serbian,
    Swedish imported from LK8000
  - Window: disable sunken window edges on HP31x
  - Target: adjust map layout
* map
  - Waypoints: more reliable waypoint decluttering
  - Topology: fix rendering bug
  - Terrain: reduce slope shading artefacts
  - Terrain: load more raster tiles on modern devices
  - Task: fix crash when drawing deformed sectors
* data files
  - Fixed potential crash while reading airfields files
  - Added more polars (Hang gliders, DG1000, Blanik, Jantar, ...)

Version 6.0.1 - 2010/12/26
* map
  - task, glide terrain: fix rendering bugs
* user interface
  - Language: translation updates
  - Language: always fall back to resource data
  - Language: enable translation on PPC2000/PPC2003
  - dialog "Switches": portrait mode layout fixed
  - dialog "Statistics": draw trace on task page
* terrain / topology
  - minor memory leak fixed
* glide computer
  - new built-in polars: IS28B2 and SZD30

Version 6.0 - 2010/12/19
* build system
  - compile with gcc / mingw32 / mingw32ce instead of Visual C++
* data files
  - support for SeeYou and Zander waypoint files
  - support for TNP airspace files
  - when started from SD card, XCSoarData is stored on SD card, too
  - when a XCSoarData directory exists on SD card, it is preferred
* devices