@@ -109,7 +109,7 @@ RasterTile::GetFieldInterpolated(unsigned lx, unsigned ly,
 }
 
 bool
-RasterTile::CheckTileVisibility(const int view_x, const int view_y)
+RasterTile::CheckTileVisibility(int view_x, int view_y, unsigned view_radius)
 {
   if (!width || !height) {
     Disable();
@@ -121,27 +121,15 @@ RasterTile::CheckTileVisibility(const int view_x, const int view_y)
   const unsigned int dy1 = abs(view_y - (int)ystart);
   const unsigned int dy2 = abs((int)yend - view_y);
 
-  if (min(dx1, dx2) * 2 < width * 3) {
-    if (min(dy1, dy2) < height)
-      return true;
-  }
-  if (min(dy1, dy2) * 2 < height * 3) {
-    if (min(dx1, dx2) < width)
-      return true;
-  }
-  if (IsEnabled()) {
-    if ((max(dx1, dx2) > width * 2) || (max(dy1, dy2) > height * 2))
-      Disable();
-  }
-  return false;
+  distance = std::max(std::min(dx1, dx2), std::min(dy1, dy2));
+  return distance <= view_radius || IsEnabled();
 }
 
 bool
-RasterTile::VisibilityChanged(int view_x, int view_y)
+RasterTile::VisibilityChanged(int view_x, int view_y, unsigned view_radius)
 {
-  request = CheckTileVisibility(view_x, view_y) && IsDisabled();
-  // JMW note: order of these is important!
-  return request;
+  request = false;
+  return CheckTileVisibility(view_x, view_y, view_radius);
 }
 
 short*
@@ -167,14 +155,24 @@ RasterTileCache::SetTile(unsigned index,
   tiles[index].set(xstart, ystart, xend, yend);
 }
 
+struct RTDistanceSort {
+  const RasterTileCache &rtc;
+
+  RTDistanceSort(RasterTileCache &_rtc):rtc(_rtc) {}
+
+  bool operator()(unsigned short ai, unsigned short bi) const {
+    const RasterTile &a = rtc.tiles[ai];
+    const RasterTile &b = rtc.tiles[bi];
+
+    return a.get_distance() < b.get_distance();
+  }
+};
+
 bool
-RasterTileCache::PollTiles(int x, int y)
+RasterTileCache::PollTiles(int x, int y, unsigned radius)
 {
   if (scan_overview)
     return false;
-
-  ActiveTiles.clear();
-  dirty = false;
 
   enum {
     /**
@@ -184,21 +182,49 @@ RasterTileCache::PollTiles(int x, int y)
     MAX_ACTIVATE = MAX_ACTIVE_TILES > 32 ? 16 : MAX_ACTIVE_TILES / 2,
   };
 
-  unsigned num_activate = 0;
-  for (int i = MAX_RTC_TILES - 1; i >= 0; --i) {
-    if (tiles[i].VisibilityChanged(x, y)) {
-      if (++num_activate > MAX_ACTIVATE)
-        tiles[i].clear_requested();
-    } else if (tiles[i].IsEnabled()) {
-      ActiveTiles.append(tiles[i]);
-      if (ActiveTiles.full())
-        /* if the limit MAX_ACTIVE_TILES is already reached at this
-           point, don't bother to open the file */
-        return false;
+  /* query all tiles; all tiles which are either in range or already
+     loaded are added to RequestTiles */
+
+  RequestTiles.clear();
+  for (int i = MAX_RTC_TILES - 1; i >= 0; --i)
+    if (tiles[i].VisibilityChanged(x, y, radius))
+      RequestTiles.append(i);
+
+  /* reduce if there are too many */
+
+  if (RequestTiles.size() > MAX_ACTIVE_TILES) {
+    /* sort by distance */
+    const RTDistanceSort sort(*this);
+    std::sort(RequestTiles.begin(), RequestTiles.end(), sort);
+
+    /* dispose all tiles which are out of range */
+    for (unsigned i = MAX_ACTIVE_TILES; i < RequestTiles.size(); ++i) {
+      RasterTile &tile = tiles[RequestTiles[i]];
+      tile.Disable();
     }
+
+    RequestTiles.shrink(MAX_ACTIVE_TILES);
   }
 
-  dirty = num_activate > MAX_ACTIVATE;
+  /* fill ActiveTiles and request new tiles */
+
+  ActiveTiles.clear();
+  dirty = false;
+
+  unsigned num_activate = 0;
+  for (unsigned i = 0; i < RequestTiles.size(); ++i) {
+    RasterTile &tile = tiles[RequestTiles[i]];
+    if (tile.IsEnabled())
+      /* re-insert the tile in the ActiveTiles list */
+      ActiveTiles.append(tile);
+    else if (++num_activate <= MAX_ACTIVATE)
+      /* request the tile in the current iteration */
+      tile.set_request();
+    else
+      /* this tile will be loaded in the next iteration */
+      dirty = true;
+  }
+
   return num_activate > 0;
 }
 
@@ -457,9 +483,14 @@ RasterTileCache::LoadOverview(const char *path, const TCHAR *world_file)
 }
 
 void
-RasterTileCache::UpdateTiles(const char *path, int x, int y)
+RasterTileCache::UpdateTiles(const char *path, int x, int y, unsigned radius)
 {
-  if (PollTiles(x, y))
+  if (radius < 256)
+    /* tiles are usually 256 pixels wide; with a radius smaller than
+       that, the (optimized) tile distance calculations may fail */
+    radius = 256;
+
+  if (PollTiles(x, y, radius))
     LoadJPG2000(path);
 }
 
